Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@ Data accessed via Facebook and Instagram APIs is used only to analyze publicly a
 No data is sold, shared with third parties, or used for advertising purposes.
 
 Users may contact us for any data-related concerns at:
-Email: your-email@example.com
+Email: a.sengupta17@gmail.com
